After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 88057 - Crashed while copy and pasting
Crashed while copy and pasting
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
1.1.x
Other other
: High critical
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-07-12 19:56 UTC by Chema Celorio
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Chema Celorio 2002-07-12 19:58:54 UTC
Package: Gnumeric
Severity: critical
Version: 1.1.4
Synopsis: Crashed while copy and pasting
Bugzilla-Product: Gnumeric
Bugzilla-Component: General
BugBuddy-GnomeVersion: 2.0 (1.117.1)

Description:
While copy and pasting stuff things crashed. I have a spreadsheet and a
recipie but the file is confidential ;-(.




Debugging Information:

Backtrace was generated from '/gnome/head/INSTALL/bin/gnumeric'

[New Thread 1024 (LWP 9376)]
0x40e5f319 in __wait4 () from /lib/libc.so.6

Thread 1 (Thread 1024 (LWP 9376))

  • #0 __wait4
    from /lib/libc.so.6
  • #1 __DTOR_END__
    from /lib/libc.so.6
  • #2 waitpid
    at wrapsyscall.c line 172
  • #3 libgnomeui_segv_handle
    at gnome-ui-init.c line 592
  • #4 pthread_sighandler
    at signals.c line 97
  • #5 <signal handler called>
  • #6 cell_foreach_dep
    at dependent.c line 1221
  • #7 cell_list_deps
    at dependent.c line 202
  • #8 dependent_queue_recalc_list
    at dependent.c line 243
  • #9 cb_single_contained_depend
    at dependent.c line 1256
  • #10 g_hash_table_foreach
    at ghash.c line 559
  • #11 sheet_region_queue_recalc
    at dependent.c line 1310
  • #12 clipboard_paste_region
    at clipboard.c line 452
  • #13 cmd_paste_copy_impl
    at commands.c line 2421
  • #14 cmd_paste_copy_redo
    at commands.c line 2469
  • #15 command_push_undo
    at commands.c line 614
  • #16 cmd_paste
    at cmd-edit.c line 324
  • #17 cmd_paste_to_selection
    at cmd-edit.c line 353
  • #18 cb_edit_paste
    at workbook-control-gui.c line 1833
  • #19 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 77
  • #20 g_closure_invoke
    at gclosure.c line 437
  • #21 signal_emit_unlocked_R
    at gsignal.c line 2341
  • #22 g_signal_emit_valist
    at gsignal.c line 2100
  • #23 g_signal_emit
    at gsignal.c line 2144
  • #24 closure_accel_activate
    at gtkwidget.c line 2560
  • #25 g_closure_invoke
    at gclosure.c line 437
  • #26 signal_emit_unlocked_R
    at gsignal.c line 2341
  • #27 g_signal_emit_valist
    at gsignal.c line 2110




------- Bug moved to this database by unknown@bugzilla.gnome.org 2002-07-12 15:58 -------

Reassigning to the default owner of the component, jody@gnome.org.

Comment 1 Chema Celorio 2002-07-12 21:39:11 UTC
1. select F71::I72
2. cut
3. paste one line below
4. Copy F70
5. Paste in F71

Kaboom!
Comment 2 Jody Goldberg 2002-08-04 19:17:53 UTC
Yummy 2 bugs for the price of 1.

Your sheet pinpointed some old cruft in the XL importer that was breaking when
importing our exported xls if it contained #REF!  That is fixed in head (I'll
backport soon)>

This dependent ref error is trickier.
Comment 3 Jody Goldberg 2002-08-05 02:00:44 UTC
This was subtle.  Its good that you found this now it would have been a brutal
source of crashes.  It boiled down to a trivial oversight in some convenience code.

    dependent_unlink (Dependent *, CellPos *)

permitted the 2nd arg to be NULL and defaulted to using A1 in that case.
Which is completely wrong if we were unlinking a cell.  Normally this was not
an issue because the cell routines always passed in a position.  However, the
relocation code operated on dependents directly and just passed in NULL.